@@ -228,7 +228,10 @@ HANDLE h;
    if (tofree>0)
    {
       free(f);
-	}
+   }
+   
+   free(lcs_home);
+   lcs_home_init=false;
 #endif
 return h;
 }
